--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-json-view-lite": "^2.0.1",
+    "react-toastify": "^11.0.3",
     "recharts": "^2.15.0",
     "swiper": "^11.2.0",
     "ws": "^8.18.0"
